cmake_minimum_required(VERSION 3.15)
project(C__Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Algorithm main.cpp NewCoder01.h NewCoder02.h NewCoder03.h ListNode.h NewCoder04.h TreeNode.h NewCoder05.h NewCoder06.h NewCoder07.h NewCoder08.h NewCoder09.h NewCoder10.h NewCoder11.h NewCoder12.h NewCoder13.h NewCoder14.h NewCoder15.h NewCoder16.h NewCoder17.h NewCoder18.h NewCoder19.h NewCoder20.h NewCoder21.h NewCoder22.h NewCoder23.h NewCoder24.h NewCoder25.h RandomListNode.h NewCoder26.h NewCoder27.h NewCoder28.h NewCoder29.h NewCoder30.h SortAlgorithm.h NewCoder31.h NewCoder32.h NewCoder33.h NewCoder34.h NewCoder35.h NewCoder36.h NewCoder37.h NewCoder38.h NewCoder39.h NewCoder40.h NewCoder41.h NewCoder42.h)